@@ -45,11 +45,11 @@
     <build-support.version>1.4</build-support.version>
     <slf4j.version>1.8.0-beta2</slf4j.version>
     <log4j2.version>2.11.1</log4j2.version>
-    <logback.version>1.2.3</logback.version>
+    <logback.version>1.3.0-alpha4</logback.version>
     <spring-version>5.1.1.RELEASE</spring-version>
     <jetty-test-policy.version>1.2</jetty-test-policy.version>
     <servlet.api.version>4.0.1-SNAPSHOT</servlet.api.version>
-    <jsp.version>8.5.33</jsp.version>
+    <jsp.version>9.0.14.1</jsp.version>
     <!-- default values are unsupported, but required to be defined for reactor sanity reasons -->
     <alpn.version>undefined</alpn.version>
     <conscrypt.version>1.4.1</conscrypt.version>
@@ -65,9 +65,10 @@
     <unix.socket.tmp></unix.socket.tmp>
     <!-- enable or not TestTracker junit5 extension i.e log message when test method is starting -->
     <jetty.testtracker.log>false</jetty.testtracker.log>
+    <jetty.surefire.argLine>-Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -Xlog:gc:stderr:time,level,tags</jetty.surefire.argLine>
 
     <!-- some maven plugins versions -->
-    <maven.surefire.version>2.22.1</maven.surefire.version>
+    <maven.surefire.version>3.0.0-M2</maven.surefire.version>
     <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
     <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
     <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
@@ -76,7 +77,14 @@
     <maven.plugin-tools.version>3.5.2</maven.plugin-tools.version>
 
     <!-- testing -->
+    <it.debug>false</it.debug>
     <jetty.test.version>5.2</jetty.test.version>
+    <!-- springboot is only used for jetty-maven-plugin it test
+    otherwise depending on Spring Boot might be chicken and egg issue :) -->
+    <springboot.version>2.1.1.RELEASE</springboot.version>
+    <jsr250-api.version>1.0</jsr250-api.version>
+    <annotation-api.version>1.3.2</annotation-api.version>
+    <jackson-databind.version>2.9.7</jackson-databind.version>
   </properties>
 
   <licenses>
@@ -171,6 +179,11 @@
                 <versionOsgiRule implementation="org.eclipse.jetty.toolchain.enforcer.rules.RequireOsgiCompatibleVersionRule" />
                 <versionRedhatRule implementation="org.eclipse.jetty.toolchain.enforcer.rules.RequireRedhatCompatibleVersionRule" />
                 <versionDebianRule implementation="org.eclipse.jetty.toolchain.enforcer.rules.RequireDebianCompatibleVersionRule" />
+                <requireUpperBoundDeps>
+                  <excludes>
+                    <exclude>javax.enterprise:cdi-api</exclude>
+                  </excludes>
+                </requireUpperBoundDeps>
               </rules>
             </configuration>
           </execution>
@@ -330,7 +343,7 @@
           <aggregate>true</aggregate>
           <strictCheck>true</strictCheck>
           <properties>
-            <copyright-range>${project.inceptionYear}-2018</copyright-range>
+            <copyright-range>${project.inceptionYear}-2019</copyright-range>
           </properties>
         </configuration>
         <executions>
@@ -427,7 +440,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.1.1</version>
           <dependencies>
             <dependency>
               <groupId>org.eclipse.jetty.toolchain</groupId>
@@ -477,7 +490,23 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-invoker-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.2.0</version>
+          <configuration>
+            <debug>${it.debug}</debug>
+            <javaHome>${java.home}</javaHome>
+            <environmentVariables>
+              <JAVA_HOME>${java.home}</JAVA_HOME>
+            </environmentVariables>
+            <projectsDirectory>src/it</projectsDirectory>
+            <timeoutInSeconds>300</timeoutInSeconds>
+            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
+            <settingsFile>src/it/settings.xml</settingsFile>
+            <skipInvocation>${skipTests}</skipInvocation>
+            <pomIncludes>
+              <pomInclude>*/pom.xml</pomInclude>
+            </pomIncludes>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -487,7 +516,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.1.1</version>
           <configuration>
             <archive>
               <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -520,10 +549,12 @@
             <detectJavaApiLink>false</detectJavaApiLink>
             <show>protected</show>
             <excludePackageNames>com.acme.*;org.slf4j.*;org.mortbay.*</excludePackageNames>
+            <!-- broken build with jdk 11.0.2
             <links>
               <link>http://docs.oracle.com/javase/8/docs/api/</link>
               <link>http://docs.oracle.com/javaee/7/api/</link>
             </links>
+            -->
           </configuration>
         </plugin>
         <plugin>
@@ -589,7 +620,9 @@
           <version>${maven.surefire.version}</version>
           <configuration>
             <forkedProcessTimeoutInSeconds>3600</forkedProcessTimeoutInSeconds>
-            <argLine>@{argLine} -Dfile.encoding=UTF-8 -Duser.language=en -Duser.region=US -showversion -Xmx1g -Xms1g -XX:+PrintGCDetails</argLine>
+            <argLine>
+              @{argLine} ${jetty.surefire.argLine}
+            </argLine>
             <failIfNoTests>false</failIfNoTests>
             <forkCount>1</forkCount>
             <reuseForks>true</reuseForks> <!-- to work around crash at https://github.com/junit-team/junit5/issues/801 -->
@@ -650,7 +683,7 @@
               <Bundle-DocURL>${jetty.url}</Bundle-DocURL>
               <Bundle-Vendor>Eclipse Jetty Project</Bundle-Vendor>
               <Bundle-Classpath>.</Bundle-Classpath>
-              <Bundle-Copyright>Copyright (c) 2008-2018 Mort Bay Consulting Pty. Ltd.</Bundle-Copyright>
+              <Bundle-Copyright>Copyright (c) 2008-2019 Mort Bay Consulting Pty. Ltd.</Bundle-Copyright>
               <_provider-policy><![CDATA[$<range;[===,=+)>]]></_provider-policy>
               <_consumer-policy><![CDATA[$<range;[===,+)>]]></_consumer-policy>
               <_noee>true</_noee>
@@ -903,7 +936,7 @@
       <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>javax.annotation-api</artifactId>
-        <version>1.3.2</version>
+        <version>${annotation-api.version}</version>
       </dependency>
       <dependency>
         <groupId>org.ow2.asm</groupId>
